# demo-dagster-sling

./: .gitignore  READMD.md  how-to.md  pyproject.toml
pipeline/: __init__.py  assets.py  resources.py
