[tool.poetry]
name = "demo-dagster-sling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.5.9"
dagster-webserver = "^1.5.9"
dagster-embedded-elt = "^0.21.10"
urllib3 = "1.26.15"
requests-toolbelt = "0.10.1"

[tool.dagster]
module_name = "pipeline"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
